[package]
name = "decompose"
version = "0.1.0"
authors = ["klaas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = "^0.2.2"
yaml-rust = "^0.4.3"
log = "^0.4.8"
simple_logger = "^1.5.0"
clap = "^2.33.0"

[dev-dependencies]
signal-hook = "^0.1.13"
