[package]
name = "decompose"
version = "0.1.0"
authors = ["Klaas de Vries"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = "^0.2.2"
serde_any = "^0.5.0"
serde = "^1"
log = "^0.4.8"
simple_logger = "^1.5.0"
clap = "^2.33.0"
signal-hook = "^0.1.13"
string-error = "^0.1.0"


[dev-dependencies]
tempfile = "^3.1.0"
rouille = "^3.0.0"
reqwest = { version = "^0.10.1", features = ["blocking"] }
nix = "^0.16.1"
regex = "^1.3.4"
