[package]
name = "decompose"
version = "0.1.0"
authors = ["Klaas de Vries"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = "^0.2.2"
serde_any = "^0.5.0"
serde = "^1"
log = "^0.4.8"
simple_logger = "^1.5.0"
clap = "^2.33.0"
signal-hook = "^0.1.13"
string-error = "^0.1.0"
chrono = "^0.4.10"
regex = "^1.3.4"
nix = "^0.18.0"
petgraph = "^0.5.1"
tokio = { version = "^0.2.22", features = ["rt-core", "net", "io-util", "process", "sync", "time", "signal", "macros", "io-std"] }
futures = "^0.3.5"


[dev-dependencies]
tempfile = "^3.1.0"
escargot = "^0.5.0"
